commit for update code

--- a/src/main/resources/commonData.properties
+++ b/src/main/resources/commonData.properties
@@ -11,9 +11,9 @@ login_pass=123456ab
 DM80I_NETWORK=DM80 Pro(DEEBOT)
 SLIM2=M86
 NETWORK_DEV=DEEBOT SLIM2
-SLIM2_FAKE=SLIM2_FAKE
+SLIM2_FAKE=M86
 #http url
-url=http://192.168.3.115:8888
+url=http://192.168.3.32:8888
 #wifi
 wifi=ECOM4F-test01
 wifiPass=eco123456
