--- a/pom.xml
+++ b/pom.xml
@@ -167,12 +167,13 @@
                 <version>2.18.1</version>
                 <configuration>
                     <suiteXmlFiles>
-                        <!--<suiteXmlFile>res\testng_English.xml</suiteXmlFile>-->
+                        <!--<suiteXmlFile>res\testng_English.xml</suiteXmlFile>
                         <suiteXmlFile>res\testng_Korean.xml</suiteXmlFile>
                         <suiteXmlFile>res\testng_Taiwan.xml</suiteXmlFile>
-                        <!--<suiteXmlFile>res\testng_French.xml</suiteXmlFile>
+                        <suiteXmlFile>res\testng_French.xml</suiteXmlFile>
                         <suiteXmlFile>res\testng_Portuguese.xml</suiteXmlFile>
                         <suiteXmlFile>res\testng_Italian.xml</suiteXmlFile>-->
+                        <suiteXmlFile>res\testng_fake_English.xml</suiteXmlFile>
                     </suiteXmlFiles>
                     <properties>
                         <property>
